# twining-benchmark

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE-REVIEW-FINDINGS.md  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  SECURITY.md  STATE.md  fly.toml  package-lock.json  package.json  tsconfig.json  twining-bench.config.ts  vitest.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.twining/: blackboard.jsonl  config.yml  metrics.jsonl
analysis/: README.md  pyproject.toml
analysis/src/benchmark_analysis/: __init__.py  __main__.py  cli.py  loader.py  models.py  stats.py
analysis/src/benchmark_analysis/dimensions/: _constants.py  behavior_outcome.py  behavioral_profile.py  conditions.py  construct_validity.py  coordination.py  coordination_lift.py  cost.py  cost_efficiency.py  effect_decomposition.py  harness_summary.py  interactions.py  learning_curve.py  recommendations.py  reliability.py  scenarios.py  scorer_diagnostics.py  scoring.py  session_health.py  sessions.py  temporal.py  work_leverage.py
analysis/src/benchmark_analysis/reports/: html.py  json_report.py  markdown.py
analysis/tests/: conftest.py  test_behavior_outcome.py  test_conditions.py  test_construct_validity.py  test_coordination.py  test_coordination_lift.py  test_cost.py  test_effect_decomposition.py  test_harness_summary.py  test_interactions.py  test_learning_curve.py  test_loader.py  test_recommendations.py  test_reliability.py  test_reports.py  test_scenarios.py  test_scorer_diagnostics.py  test_scoring.py  test_sessions.py  test_stats.py  test_temporal.py
(+4095 files in other folders)
