[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark-analysis"
version = "0.1.0"
description = "Statistical analysis for Twining benchmark results"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
benchmark-analysis = "benchmark_analysis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
